CCKEY-280 fix overflow on firefox

--- a/src/components/data/KeyModal.less
+++ b/src/components/data/KeyModal.less
@@ -16,7 +16,7 @@
 .cckey-key-modal-breadcrumb {
   width: 100%;
   margin-bottom: 20px;
-  overflow: scroll;
+  overflow: auto;
   white-space: nowrap;
 }
 
