--- a/src/components/data/widgets/LiveFeedWidget.less
+++ b/src/components/data/widgets/LiveFeedWidget.less
@@ -8,7 +8,7 @@
     height: auto;
     max-height: 40%;
     overflow-wrap: break-word;
-    overflow: scroll;
+    overflow: auto;
     .ant-timeline-item-content {
       font-size: 1.05rem;
 
